# scene_desc_extractor

./: README.md
scene_desc_extractor/: .gitignore  pyproject.toml
scene_desc_extractor/dockers/docker_mlflow/: docker-compose.yaml  mlflow_tests.ipynb
scene_desc_extractor/research/: bilstm_experiments.ipynb  conllu_adapter.ipynb  conllu_convert_later_to_test.ipynb  conllu_converter.py  scene_desc.py
scene_desc_extractor/research/spacy_research/: spacy_coreference.ipynb  spacy_ner.ipynb
scene_desc_extractor/research/udapy_research/: udapy_visualizing.ipynb
