[tool.poetry]
name = "scene-desc-extractor"
version = "0.1.0"
description = ""
authors = ["Alexandra Nasonova  <aleksandra.verzun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
mlflow = "^2.11.3"
torch = "^2.2.2"
spacy = "^3.7.4"
numpy = "^1.26.4"
spacy-experimental = "^0.6.4"
transformers = "^4.39.3"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
